--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "quagga": "^0.12.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "eslint": "^8",
