--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-auth": "^4.24.7",
     "quagga": "^0.12.1",
     "react": "^18",
+    "react-barcode-reader": "^0.0.2",
     "react-dom": "^18",
     "react-toastify": "^10.0.5",
     "swr": "^2.2.5"
